# ks33requests

./: .coveragerc  .flake8  .gitignore  .style.yapf  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING.txt  INSTALL.md  Pipfile  README.md  environment.yml  setup.cfg  setup.py
.circleci/: config.yml
docs/: conf.py  index.rst  ks33requests.client.rst  ks33requests.errors.rst  ks33requests.rst  ks33requests.utils.rst
docs/api/: ks33requests.auth.rst  ks33requests.schemas.rst  modules.rst
notebooks/: guide.ipynb
requirements/: dev.txt
requires/: dev.txt
scripts/: sample.py
src/ks33requests/: __init__.py  auth.py  client.py  connection.py  constants.py  errors.py  utils.py
src/ks33requests/schemas/: amazon_s3.py  s3_api.py  s3_sub.py
tests/: test_upload.py
