[metadata]
name = ks33requests
description = 适用于金山云对象存储(KS3)的简单 Python3 客户端
long_description = file: README.md, CHANGELOG.md, CONTRIBUTING.md, AUTHORS.md
long_description_content_type = text/markdown
url = https://github.com/tanbro/ks33requests
python_requires = >=3.5
license = GNU General Public License v3 or later
classifiers =
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Natural Language :: Chinese (Simplified)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Internet :: WWW/HTTP

[options]
package_dir =
    = src
packages = find:

install_requires =
    setuptools>=38.6.0
    requests<3.0,>=2.0
    lxml<5.0,>=4.0

setup_requires =
    setuptools_scm
    setuptools_scm_git_archive

[options.packages.find]
where = src
