# setuptools configure of this package
# see:
# * https://packaging.python.org/
# * https://setuptools.readthedocs.io/

[metadata]
name = ks33requests
description = 适用于金山云对象存储(KS3)的简单 Python3 客户端
long_description = file: README.md, CHANGELOG.md, CONTRIBUTING.md, AUTHORS.md
long_description_content_type = text/markdown
url = https://github.com/tanbro/ks33requests
python_requires = >=3.5
license = Apache Software License
classifiers =
    License :: OSI Approved :: Apache Software License
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Natural Language :: Chinese (Simplified)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Internet :: WWW/HTTP

[options]
package_dir =
    = src
packages = find:

setup_requires =
    setuptools_scm
    setuptools_scm_git_archive

[options.packages.find]
where = src
